# sfml-gui

./: .gitignore  CMakeLists-Windows.txt  CMakeLists.txt  HOW_TO_CREATE_WIDGET.md  README.md  main.cpp  sfml-gui-button.hpp  sfml-gui-checkbox.hpp  sfml-gui-listbox.hpp  sfml-gui-slider.hpp  sfml-gui-text.hpp  sfml-gui.hpp
clr-theme/: CHANGELOG.md  README.md  package.json  vsc-extension-quickstart.md
clr-theme/themes/: CLEAR THEME-color-theme.json
sfml-gui/Debug/sfml-gui.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  sfml-gui.lastbuildstate
src/: TODO.txt  example.cpp  main.cpp  test.cpp
src/sfml-gui/: HOW_TO_CREATE_WIDGET.md  button.hpp  gui.cpp  gui.hpp  sf_widget.cpp  sf_widget.h  sfgui-utils.cpp  sfgui-utils.hpp
src/sfml-gui/widgets/: button.hpp  checkbox.hpp  inputbox.hpp  label.hpp  listbox.hpp  slider.hpp  slider2.hpp  slider3.hpp  slider_template.hpp
